# dmaia

./: .gitignore  README.md  dmaia.code-workspace  format-exercises.py  pyproject.toml  test.tex
1-Logic-and-Proofs/: 1-1-Propositional-Logic.md  1-2-Applications-of-Propositional-Logic.md  1-3-Propositional-Equivalences.md  1-4-Predicates-and-Quantifiers.md  1-5-Nested-Quantifiers.md  1-6-Rules-of-Inference.md  1-7-Introduction-to-Proofs.md  1-8-Proof-Methods-and-Strategy.md  1-Review.md  1-Supplementary.md
2-Basic-Structures/: 2-1-Sets.md  2-2-Set-Operations.md  2-3-Functions.md  2-4-Sequences-and-Summations.md  2-5-Cardinality-of-Sets.md  2-6-Matrices.md  2-Review.md  2-Supplementary.md
