[tool.poetry]
name = "dmaia"
version = "0.1.0"
description = ""
authors = ["Podolski, Malte <malte.podolski@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[tool.pyright]
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = "true"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
